fixing hero section image , program button , hero section mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@ header ul a:hover{
   justify-content: space-between;
   align-items: center;
   min-height: calc(100vh - 62px);
+  gap: 40px;
 }
 @media (max-width:992px) {
   .hero .container{
@@ -278,7 +279,6 @@ header ul a:hover{
     gap: 50px;
   }
 }
-
 .hero .content{
   line-height: 1.5;
   max-width: 500px;
@@ -298,8 +298,8 @@ header ul a:hover{
   from { width: 0 }
   to { width: 100% }
 }
-@media (max-width:992px) {
-  .hero picture{
+@media (max-width:767px) {
+  .hero .photograph{
     order: 2;
   }
 }
@@ -425,7 +425,11 @@ header ul a:hover{
   margin-bottom: 30px;
 }
 .program #showschedule{
-  width: 187px;
+  width: 200px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  gap: 10px;
   margin-bottom: 30px;
 }
 
